--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-GB"
-title                    : "Your Name / Site Title"
+title                    : "Therese"
 title_separator          : "-"
 name                     : &name "Therese Charles"
 description              : &description "personal description"
